# ncsExp

./: README.rst
RTT_debug/: prj.conf
app/ble/: ble.7z
app/mcuboot_prv_key/peripheral_cts_client/: CMakeLists.txt  README.rst  custom-key-rsa-2048.pem  mcuboot.conf  mcuboot_overlay.conf  prj.conf
code_relocation/: CMakeLists.txt  README.rst  custom_flash.ld  leo_priv.pem  prj.conf
code_relocation/src/: main.c
driver/RTT_debug/: README.rst  sample.yaml
driver/SPI/: nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuappns.overlay  nrf5340pdk_nrf5340_cpuapp.overlay  nrf9160dk_nrf9160.overlay  nrf9160dk_nrf9160ns.overlay  prj.conf
driver/SPI_nRF91/: nrf9160_pca10090ns.overlay  nrf9160dk_nrf9160ns.overlay  prj.conf
driver/SPI_nRF91_ncs_v1.2.1/: merged.hex  nrf9160DK_setup Guide.txt  nrf9160_pca10090ns.overlay  prj.conf
driver/spi_flash/: README.rst  nrf52840dk_nrf52811.overlay
driver/uart_0/: nrf52833dk_nrf52833.overlay  prj.conf
driver/uart_1/: CMakeLists.txt  README.rst  nrf9160dk_nrf9160ns.overlay  prj.conf
nrf5340_ram_sharing_code_relocation_example/blinky_appcore/: nrf5340pdk_nrf5340_cpunet.overlay  prj.conf  shared_ram.ld
nrf5340_ram_sharing_code_relocation_example/blinky_netcore_temp/: prj.conf  (+2 more)
nrf53_ble/throughput_with_flash_write/netcore/: CMakeLists.txt  dts.overlay  prj.conf
nrf53_ble/throughput_with_flash_write/netcore/src/: cmds.c  main.c
python/: udp_3way_test.py  udp_ack_test.py  udp_ack_test.py.save  udp_echo_server.py  udp_echo_server_local.py  udp_recv_test.py
s0_boot_example/: README.rst  leo_pub.pem
uart_0/: nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
uart_1/: README.rst  nrf5340dk_nrf5340_cpuapp.overlay
(+305 files in other folders)
